--- a/Workload/app/assets/implementation/items/PackageInstallerItem/NewWorkspace/package.json
+++ b/Workload/app/assets/implementation/items/PackageInstallerItem/NewWorkspace/package.json
@@ -1,8 +1,8 @@
 {
-    "id": "PlanningWS",
-    "displayName": "Product Planning Workspace",
-    "description": "Set up a workspace that will configure every component that is needed for product planning.",
-    "icon": "/assets/implementation/items/PackageInstallerItem/Planning/icon.png",
+    "id": "NewWorkspace",
+    "displayName": "Workspace with a Lakehouse",
+    "description": "Set up a workspace that will configure every component that is to get started.",
+    "icon": "/assets/implementation/items/PackageInstallerItem/NewWorkspace/icon.png",
     "deploymentConfig": {
         "type": "UX",
         "location": "NewWorkspace",
@@ -10,7 +10,7 @@
     },
     "items": [
         {
-            "displayName": "PlanningLH",
+            "displayName": "NewLakehouse",
             "type": "Lakehouse",
             "description": "A lakehouse that contains access to all Planning Data."
         }
