Adding new deployment functionallity (data, jobs, shortcuts, ...) and cleaning

--- a/Workload/app/assets/items/PackageInstallerItem/NewWorkspace/package.json
+++ b/Workload/app/assets/items/PackageInstallerItem/NewWorkspace/package.json
@@ -5,14 +5,13 @@
     "icon": "/assets/items/PackageInstallerItem/NewWorkspace/icon.png",
     "deploymentConfig": {
         "type": "UX",
-        "location": "NewWorkspace",
-        "suffixItemNames": false 
+        "location": "NewWorkspace"
     },
     "items": [
         {
-            "displayName": "NewLakehouse",
             "type": "Lakehouse",
-            "description": "A lakehouse that contains access to all Planning Data."
+            "displayName": "MyLakehouse",
+            "description": "A lakehouse that contains data."
         }
     ]
 }
