--- a/Workload/package.json
+++ b/Workload/package.json
@@ -16,11 +16,11 @@
     "@fluentui/react": "^8.110.7",
     "@fluentui/react-components": "^9.7.2",
     "@fluentui/react-icons": "2.0.226",
+    "@ms-fabric/workload-client": "^2.1.0",
     "@monaco-editor/react": "^4.7.0",
-    "@ms-fabric/workload-client": "^3.0.0",
     "@reduxjs/toolkit": "^2.6.0",
     "history": "^4.9.0",
-    "i18next": "^23.12.3",
+    "i18next": "^25.4.1",
     "i18next-http-backend": "^2.4.2",
     "jwt-decode": "^3.1.2",
     "monaco-editor": "^0.52.2",
@@ -36,6 +36,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.2",
+    "typescript": "^5.0.4",
     "ajv": "^8.12.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.0.0",
