--- a/Workload/package.json
+++ b/Workload/package.json
@@ -4,11 +4,11 @@
   "description": "Microsoft Fabric - Developer Sample App",
   "scripts": {
     "start": "npm run start:devServer",
-    "start:devServer": "env-cmd -f .env.dev webpack serve --open --config ./devServer/webpack.dev.js",
+    "start:devServer": "cross-env NODE_OPTIONS=--max-old-space-size=8192 env-cmd -f .env.dev webpack serve --open --config ./devServer/webpack.dev.js",
     "start:devGateway": "node ./devServer/start-devGateway.js",
-    "start:codespace": "node --max-old-space-size=4096 ./node_modules/.bin/env-cmd -f .env.dev webpack serve --open --config ./devServer/webpack.dev.js --no-hot",
-    "build:test": "env-cmd -f .env.test webpack --config ./webpack.config.js --output-path ../build/Frontend --progress",
-    "build:prod": "env-cmd -f .env.prod webpack --config ./webpack.config.js --output-path ../build/Frontend --mode production --progress"
+    "start:codespace": "cross-env NODE_OPTIONS=--max-old-space-size=8192 env-cmd -f .env.dev webpack serve --open --config ./devServer/webpack.dev.js --no-hot",
+    "build:test": "cross-env NODE_OPTIONS=--max-old-space-size=8192 env-cmd -f .env.test webpack --config ./webpack.config.js --output-path ../build/Frontend --progress",
+    "build:prod": "cross-env NODE_OPTIONS=--max-old-space-size=8192 env-cmd -f .env.prod webpack --config ./webpack.config.js --output-path ../build/Frontend --mode production --progress"
   },
   "author": "",
   "license": "ISC",
